--- a/src/application/TimesTableChoosingUI.fxml
+++ b/src/application/TimesTableChoosingUI.fxml
@@ -6,22 +6,21 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.TimesTableChoosingController">
    <children>
       <FlowPane alignment="CENTER_LEFT" prefHeight="400.0" prefWidth="176.0" vgap="8.0">
          <children>
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="2" />
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="3" />
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="4" />
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="5" />
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="6" />
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="7" />
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="8" />
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="9" />
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="10" />
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="11" />
-            <Button alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="12" />
+            <Button fx:id="times2" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" onMouseClicked="#handlePlay" prefHeight="27.0" prefWidth="101.0" text="2" />
+            <Button fx:id="times3" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" onMouseClicked="#handlePlay" prefHeight="27.0" prefWidth="101.0" text="3" />
+            <Button fx:id="times4" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" onMouseClicked="#handlePlay" prefHeight="27.0" prefWidth="101.0" text="4" />
+            <Button fx:id="times5" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" onMouseClicked="#handlePlay" prefHeight="27.0" prefWidth="101.0" text="5" />
+            <Button fx:id="times6" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="101.0" text="6" />
+            <Button fx:id="times7" alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="7" />
+            <Button fx:id="times8" alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="8" />
+            <Button fx:id="times9" alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="9" />
+            <Button fx:id="times10" alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="10" />
+            <Button fx:id="times11" alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="11" />
+            <Button fx:id="times12" alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="12" />
          </children>
       </FlowPane>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="291.0" layoutY="144.0" prefHeight="17.0" prefWidth="264.0" text="-">
@@ -29,5 +28,6 @@
             <Font size="69.0" />
          </font>
       </Label>
+      <Button fx:id="back" layoutX="478.0" layoutY="359.0" mnemonicParsing="false" onMouseClicked="#handleBack" text="Back to Home" />
    </children>
 </AnchorPane>
