--- a/src/application/TimesTableChoosingUI.fxml
+++ b/src/application/TimesTableChoosingUI.fxml
@@ -14,13 +14,13 @@
             <Button fx:id="times3" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" onMouseClicked="#handlePlay" prefHeight="27.0" prefWidth="101.0" text="3" />
             <Button fx:id="times4" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" onMouseClicked="#handlePlay" prefHeight="27.0" prefWidth="101.0" text="4" />
             <Button fx:id="times5" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" onMouseClicked="#handlePlay" prefHeight="27.0" prefWidth="101.0" text="5" />
-            <Button fx:id="times6" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="101.0" text="6" />
-            <Button fx:id="times7" alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="7" />
-            <Button fx:id="times8" alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="8" />
-            <Button fx:id="times9" alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="9" />
-            <Button fx:id="times10" alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="10" />
-            <Button fx:id="times11" alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="11" />
-            <Button fx:id="times12" alignment="CENTER" mnemonicParsing="false" prefHeight="27.0" prefWidth="101.0" text="12" />
+            <Button fx:id="times6" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" onMouseClicked="#handlePlay" prefHeight="27.0" prefWidth="101.0" text="6" />
+            <Button fx:id="times7" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" onMouseClicked="#handlePlay" prefHeight="27.0" prefWidth="101.0" text="7" />
+            <Button fx:id="times8" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" onMouseClicked="#handlePlay" prefHeight="27.0" prefWidth="101.0" text="8" />
+            <Button fx:id="times9" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" onMouseClicked="#handlePlay" prefHeight="27.0" prefWidth="101.0" text="9" />
+            <Button fx:id="times10" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" onMouseClicked="#handlePlay" prefHeight="27.0" prefWidth="101.0" text="10" />
+            <Button fx:id="times11" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" onMouseClicked="#handlePlay" prefHeight="27.0" prefWidth="101.0" text="11" />
+            <Button fx:id="times12" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" onMouseClicked="#handlePlay" prefHeight="27.0" prefWidth="101.0" text="12" />
          </children>
       </FlowPane>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="291.0" layoutY="144.0" prefHeight="17.0" prefWidth="264.0" text="-">
