--- a/src/application/gameUI.fxml
+++ b/src/application/gameUI.fxml
@@ -9,26 +9,35 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GameController">
    <children>
-      <Label layoutX="260.0" layoutY="65.0" prefHeight="28.0" prefWidth="20.0" text="X">
-         <font>
-            <Font size="48.0" />
-         </font>
-      </Label>
-      <Label fx:id="front" layoutX="168.0" layoutY="34.0" text="5">
-         <font>
-            <Font size="96.0" />
-         </font>
-      </Label>
-      <Label layoutX="324.0" layoutY="36.0" text="4">
-         <font>
-            <Font size="96.0" />
-         </font>
-      </Label>
-      <Label layoutX="413.0" layoutY="60.0" text="=">
-         <font>
-            <Font size="48.0" />
-         </font>
-      </Label>
+      <FlowPane alignment="CENTER" hgap="10.0" layoutX="157.0" layoutY="22.0" prefHeight="139.0" prefWidth="414.0">
+         <children>
+            <Label fx:id="front" text="10">
+               <font>
+                  <Font name="Comic Sans MS" size="96.0" />
+               </font>
+            </Label>
+            <Label prefHeight="28.0" prefWidth="20.0" text="X">
+               <font>
+                  <Font name="Comic Sans MS" size="48.0" />
+               </font>
+            </Label>
+            <Label fx:id="back" text="12">
+               <font>
+                  <Font name="Comic Sans MS" size="96.0" />
+               </font>
+            </Label>
+            <Label text="=">
+               <font>
+                  <Font size="48.0" />
+               </font>
+            </Label>
+            <Label text="??">
+               <font>
+                  <Font size="96.0" />
+               </font>
+            </Label>
+         </children>
+      </FlowPane>
       <Label layoutX="28.0" layoutY="64.0" text="Timer: ">
          <font>
             <Font size="16.0" />
@@ -39,29 +48,24 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <Button layoutX="19.0" layoutY="356.0" mnemonicParsing="false" text="Back to Home" />
-      <FlowPane hgap="30.0" layoutX="157.0" layoutY="147.0" prefHeight="218.0" prefWidth="414.0" vgap="30.0">
+      <Button fx:id="welcomeHome" layoutX="19.0" layoutY="356.0" mnemonicParsing="false" onMouseClicked="#handleBack" text="Back to Home" />
+      <FlowPane hgap="30.0" layoutX="157.0" layoutY="163.0" prefHeight="218.0" prefWidth="414.0" vgap="30.0">
          <children>
-            <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="Button" />
-            <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="Button" />
-            <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="Button" />
-            <Button mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="Button" />
+            <Button fx:id="choice1" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="Button" />
+            <Button fx:id="choice2" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="Button" />
+            <Button fx:id="choice3" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="Button" />
+            <Button fx:id="choice4" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="Button" />
          </children>
          <padding>
             <Insets top="30.0" />
          </padding>
       </FlowPane>
-      <Label layoutX="467.0" layoutY="37.0" text="??">
-         <font>
-            <Font size="96.0" />
-         </font>
-      </Label>
-      <Label layoutX="39.0" layoutY="84.0" text="60">
+      <Label fx:id="time" layoutX="39.0" layoutY="84.0" text="60">
          <font>
             <Font size="40.0" />
          </font>
       </Label>
-      <Label layoutX="38.0" layoutY="163.0" text="100">
+      <Label fx:id="score" layoutX="38.0" layoutY="163.0" text="0">
          <font>
             <Font size="40.0" />
          </font>
