change font style

--- a/src/application/gameUI.fxml
+++ b/src/application/gameUI.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -7,7 +12,7 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GameController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GameController">
    <children>
       <FlowPane alignment="CENTER" hgap="10.0" layoutX="157.0" layoutY="22.0" prefHeight="139.0" prefWidth="414.0">
          <children>
@@ -28,33 +33,48 @@
             </Label>
             <Label text="=">
                <font>
-                  <Font size="48.0" />
+                  <Font name="Comic Sans MS" size="48.0" />
                </font>
             </Label>
             <Label text="??">
                <font>
-                  <Font size="96.0" />
+                  <Font name="Comic Sans MS" size="96.0" />
                </font>
             </Label>
          </children>
       </FlowPane>
       <Label layoutX="28.0" layoutY="64.0" text="Timer: ">
          <font>
-            <Font size="16.0" />
+            <Font name="Comic Sans MS" size="16.0" />
          </font>
       </Label>
       <Label layoutX="30.0" layoutY="142.0" text="Score: ">
          <font>
-            <Font size="16.0" />
+            <Font name="Comic Sans MS" size="16.0" />
          </font>
       </Label>
-      <Button fx:id="welcomeHome" layoutX="19.0" layoutY="356.0" mnemonicParsing="false" onMouseClicked="#handleBack" text="Back to Home" />
+      <Button fx:id="welcomeHome" layoutX="19.0" layoutY="356.0" mnemonicParsing="false" onMouseClicked="#handleBack" prefHeight="29.0" prefWidth="113.0" text="Back to Home">
+         <font>
+            <Font name="Comic Sans MS Bold" size="13.0" />
+         </font></Button>
       <FlowPane hgap="30.0" layoutX="157.0" layoutY="163.0" prefHeight="218.0" prefWidth="414.0" vgap="30.0">
          <children>
-            <Button fx:id="choice1" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="Button" />
-            <Button fx:id="choice2" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="Button" />
-            <Button fx:id="choice3" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="Button" />
-            <Button fx:id="choice4" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="Button" />
+            <Button fx:id="choice1" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="A">
+               <font>
+                  <Font name="Comic Sans MS" size="24.0" />
+               </font></Button>
+            <Button fx:id="choice2" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="B">
+               <font>
+                  <Font name="Comic Sans MS" size="24.0" />
+               </font></Button>
+            <Button fx:id="choice3" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="C">
+               <font>
+                  <Font name="Comic Sans MS" size="24.0" />
+               </font></Button>
+            <Button fx:id="choice4" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="D">
+               <font>
+                  <Font name="Comic Sans MS" size="24.0" />
+               </font></Button>
          </children>
          <padding>
             <Insets top="30.0" />
@@ -62,12 +82,12 @@
       </FlowPane>
       <Label fx:id="time" layoutX="39.0" layoutY="84.0" text="60">
          <font>
-            <Font size="40.0" />
+            <Font name="Comic Sans MS" size="40.0" />
          </font>
       </Label>
       <Label fx:id="score" layoutX="38.0" layoutY="163.0" text="0">
          <font>
-            <Font size="40.0" />
+            <Font name="Comic Sans MS" size="40.0" />
          </font>
       </Label>
    </children>
