--- a/src/application/TimesTableChoosingUI.fxml
+++ b/src/application/TimesTableChoosingUI.fxml
@@ -1,26 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.TimesTableChoosingController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.TimesTableChoosingController">
    <children>
-      <FlowPane alignment="CENTER_LEFT" prefHeight="400.0" prefWidth="176.0" vgap="8.0">
+      <FlowPane alignment="CENTER_LEFT" prefHeight="400.0" prefWidth="176.0" vgap="7.0">
          <children>
-            <Button fx:id="times2" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="101.0" text="2" />
-            <Button fx:id="times3" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="101.0" text="3" />
-            <Button fx:id="times4" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="101.0" text="4" />
-            <Button fx:id="times5" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="101.0" text="5" />
-            <Button fx:id="times6" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="101.0" text="6" />
-            <Button fx:id="times7" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="101.0" text="7" />
-            <Button fx:id="times8" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="101.0" text="8" />
-            <Button fx:id="times9" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="101.0" text="9" />
-            <Button fx:id="times10" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="101.0" text="10" />
-            <Button fx:id="times11" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="101.0" text="11" />
-            <Button fx:id="times12" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="101.0" text="12" />
+            <Button fx:id="times2" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="2">
+               <font>
+                  <Font name="Comic Sans MS Bold" size="13.0" />
+               </font></Button>
+            <Button fx:id="times3" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="3">
+               <font>
+                  <Font name="Comic Sans MS Bold" size="13.0" />
+               </font></Button>
+            <Button fx:id="times4" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="4">
+               <font>
+                  <Font name="Comic Sans MS Bold" size="13.0" />
+               </font></Button>
+            <Button fx:id="times5" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="5">
+               <font>
+                  <Font name="Comic Sans MS Bold" size="13.0" />
+               </font></Button>
+            <Button fx:id="times6" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="6">
+               <font>
+                  <Font name="Comic Sans MS Bold" size="13.0" />
+               </font></Button>
+            <Button fx:id="times7" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="7">
+               <font>
+                  <Font name="Comic Sans MS Bold" size="13.0" />
+               </font></Button>
+            <Button fx:id="times8" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="8">
+               <font>
+                  <Font name="Comic Sans MS Bold" size="13.0" />
+               </font></Button>
+            <Button fx:id="times9" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="9">
+               <font>
+                  <Font name="Comic Sans MS Bold" size="13.0" />
+               </font></Button>
+            <Button fx:id="times10" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="10">
+               <font>
+                  <Font name="Comic Sans MS Bold" size="13.0" />
+               </font></Button>
+            <Button fx:id="times11" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="11">
+               <font>
+                  <Font name="Comic Sans MS Bold" size="13.0" />
+               </font></Button>
+            <Button fx:id="times12" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="12">
+               <font>
+                  <Font name="Comic Sans MS Bold" size="13.0" />
+               </font></Button>
          </children>
       </FlowPane>
       <Label fx:id="highscore" alignment="CENTER" contentDisplay="CENTER" layoutX="272.0" layoutY="140.0" prefHeight="17.0" prefWidth="264.0" text="??">
@@ -28,8 +65,11 @@
             <Font name="Comic Sans MS" size="69.0" />
          </font>
       </Label>
-      <Button fx:id="back" layoutX="478.0" layoutY="359.0" mnemonicParsing="false" onMouseClicked="#handleBack" text="Back to Home" />
-      <Label layoutX="257.0" layoutY="105.0" text="High Score">
+      <Button fx:id="back" layoutX="465.0" layoutY="359.0" mnemonicParsing="false" onMouseClicked="#handleBack" prefHeight="29.0" prefWidth="119.0" text="Back to Home">
+         <font>
+            <Font name="Comic Sans MS Bold" size="13.0" />
+         </font></Button>
+      <Label layoutX="242.0" layoutY="105.0" text="High Score:">
          <font>
             <Font name="Comic Sans MS" size="24.0" />
          </font>
