--- a/src/application/boardUI.fxml
+++ b/src/application/boardUI.fxml
@@ -1,22 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.BoardController">
    <children>
       <Label layoutX="86.0" layoutY="25.0" text="Score:">
          <font>
             <Font name="Comic Sans MS" size="48.0" />
          </font>
       </Label>
-      <Label layoutX="90.0" layoutY="100.0" text="Frequency:">
+      <Label layoutX="90.0" layoutY="115.0" text="Frequency:">
          <font>
             <Font name="Comic Sans MS" size="36.0" />
          </font>
@@ -31,29 +27,29 @@
             <Font name="Comic Sans MS" size="36.0" />
          </font>
       </Label>
-      <Button layoutX="309.0" layoutY="330.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="129.0" text="Play Again">
+      <Button fx:id="playAgain" layoutX="309.0" layoutY="330.0" mnemonicParsing="false" onMouseClicked="#handlePlayAgain" prefHeight="44.0" prefWidth="129.0" text="Play Again">
          <font>
             <Font name="Comic Sans MS Bold" size="15.0" />
          </font></Button>
-      <Button layoutX="158.0" layoutY="330.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="129.0" text="Back to Home">
+      <Button fx:id="welcomeHome" layoutX="158.0" layoutY="330.0" mnemonicParsing="false" onMouseClicked="#handleBack" prefHeight="44.0" prefWidth="129.0" text="Back to Home">
          <font>
             <Font name="Comic Sans MS Bold" size="15.0" />
          </font></Button>
-      <Label layoutX="270.0" layoutY="47.0" text="Label">
+      <Label fx:id="scoreLb" layoutX="275.0" layoutY="27.0" text="??">
          <font>
-            <Font name="Comic Sans MS" size="13.0" />
+            <Font name="Comic Sans MS" size="48.0" />
          </font></Label>
-      <Label layoutX="304.0" layoutY="114.0" text="Label">
+      <Label fx:id="frequency" layoutX="312.0" layoutY="109.0" text="??">
          <font>
-            <Font name="Comic Sans MS" size="13.0" />
+            <Font name="Comic Sans MS" size="48.0" />
          </font></Label>
-      <Label layoutX="168.0" layoutY="255.0" text="Label">
+      <Label fx:id="correct" layoutX="202.0" layoutY="242.0" text="??">
          <font>
-            <Font name="Comic Sans MS" size="13.0" />
+            <Font name="Comic Sans MS" size="48.0" />
          </font></Label>
-      <Label layoutX="421.0" layoutY="255.0" text="Label">
+      <Label fx:id="wrong" layoutX="428.0" layoutY="243.0" text="??">
          <font>
-            <Font name="Comic Sans MS" size="13.0" />
+            <Font name="Comic Sans MS" size="48.0" />
          </font></Label>
    </children>
 </AnchorPane>
