--- a/src/application/TimesTableChoosingUI.fxml
+++ b/src/application/TimesTableChoosingUI.fxml
@@ -1,75 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.TimesTableChoosingController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('pic/wallpaper.jpg');" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.TimesTableChoosingController">
    <children>
-      <FlowPane alignment="CENTER_LEFT" prefHeight="400.0" prefWidth="176.0" vgap="7.0">
+      <FlowPane alignment="CENTER_LEFT" prefHeight="400.0" prefWidth="176.0" vgap="4.0">
          <children>
-            <Button fx:id="times2" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="2">
+            <Button fx:id="times2" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" style="-fx-background-color: black;" text="2" textFill="RED">
                <font>
-                  <Font name="Comic Sans MS Bold" size="13.0" />
+                  <Font name="Comic Sans MS Bold" size="15.0" />
                </font></Button>
-            <Button fx:id="times3" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="3">
+            <Button fx:id="times3" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" style="-fx-background-color: black;" text="3" textFill="#ff8600">
                <font>
-                  <Font name="Comic Sans MS Bold" size="13.0" />
+                  <Font name="Comic Sans MS Bold" size="15.0" />
                </font></Button>
-            <Button fx:id="times4" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="4">
+            <Button fx:id="times4" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" style="-fx-background-color: black;" text="4" textFill="#fbff00">
                <font>
-                  <Font name="Comic Sans MS Bold" size="13.0" />
+                  <Font name="Comic Sans MS Bold" size="15.0" />
                </font></Button>
-            <Button fx:id="times5" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="5">
+            <Button fx:id="times5" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" style="-fx-background-color: black;" text="5" textFill="#00ff0d">
                <font>
-                  <Font name="Comic Sans MS Bold" size="13.0" />
+                  <Font name="Comic Sans MS Bold" size="15.0" />
                </font></Button>
-            <Button fx:id="times6" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="6">
+            <Button fx:id="times6" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" style="-fx-background-color: black;" text="6" textFill="#00ffae">
                <font>
-                  <Font name="Comic Sans MS Bold" size="13.0" />
+                  <Font name="Comic Sans MS Bold" size="15.0" />
                </font></Button>
-            <Button fx:id="times7" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="7">
+            <Button fx:id="times7" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" style="-fx-background-color: black;" text="7" textFill="#00e0ff">
                <font>
-                  <Font name="Comic Sans MS Bold" size="13.0" />
+                  <Font name="Comic Sans MS Bold" size="15.0" />
                </font></Button>
-            <Button fx:id="times8" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="8">
+            <Button fx:id="times8" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" style="-fx-background-color: black;" text="8" textFill="#0048ff">
                <font>
-                  <Font name="Comic Sans MS Bold" size="13.0" />
+                  <Font name="Comic Sans MS Bold" size="15.0" />
                </font></Button>
-            <Button fx:id="times9" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="9">
+            <Button fx:id="times9" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" style="-fx-background-color: black;" text="9" textFill="#8548ff">
                <font>
-                  <Font name="Comic Sans MS Bold" size="13.0" />
+                  <Font name="Comic Sans MS Bold" size="15.0" />
                </font></Button>
-            <Button fx:id="times10" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="10">
+            <Button fx:id="times10" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" style="-fx-background-color: black;" text="10" textFill="#af00ff">
                <font>
-                  <Font name="Comic Sans MS Bold" size="13.0" />
+                  <Font name="Comic Sans MS Bold" size="15.0" />
                </font></Button>
-            <Button fx:id="times11" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="11">
+            <Button fx:id="times11" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" style="-fx-background-color: black;" text="11" textFill="#ff00c8">
                <font>
-                  <Font name="Comic Sans MS Bold" size="13.0" />
+                  <Font name="Comic Sans MS Bold" size="15.0" />
                </font></Button>
-            <Button fx:id="times12" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" text="12">
+            <Button fx:id="times12" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" prefHeight="27.0" prefWidth="120.0" style="-fx-background-color: black;" text="12" textFill="#ff0044">
                <font>
-                  <Font name="Comic Sans MS Bold" size="13.0" />
+                  <Font name="Comic Sans MS Bold" size="15.0" />
                </font></Button>
          </children>
       </FlowPane>
-      <Label fx:id="highscore" alignment="CENTER" contentDisplay="CENTER" layoutX="272.0" layoutY="140.0" prefHeight="17.0" prefWidth="264.0" text="??">
+      <Label fx:id="highscore" alignment="CENTER" contentDisplay="CENTER" layoutX="179.0" layoutY="61.0" prefHeight="267.0" prefWidth="359.0" style="-fx-background-color: black;" text="??" textFill="WHITE">
          <font>
-            <Font name="Comic Sans MS" size="69.0" />
+            <Font name="Comic Sans MS" size="160.0" />
          </font>
       </Label>
-      <Button fx:id="back" layoutX="465.0" layoutY="359.0" mnemonicParsing="false" onMouseClicked="#handleBack" prefHeight="29.0" prefWidth="119.0" text="Back to Home">
+      <Button fx:id="back" layoutX="465.0" layoutY="359.0" mnemonicParsing="false" onMouseClicked="#handleBack" prefHeight="29.0" prefWidth="119.0" style="-fx-background-color: black;" text="Back to Home" textFill="WHITE">
          <font>
             <Font name="Comic Sans MS Bold" size="13.0" />
          </font></Button>
-      <Label layoutX="242.0" layoutY="105.0" text="High Score:">
+      <Label layoutX="189.0" layoutY="64.0" style="-fx-background-color: black;" text="High Score:" textFill="#fffd00">
          <font>
             <Font name="Comic Sans MS" size="24.0" />
          </font>
