--- a/src/application/gameUI.fxml
+++ b/src/application/gameUI.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -12,66 +7,67 @@
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GameController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('pic/wallpaper.jpg');" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GameController">
    <children>
-      <FlowPane alignment="CENTER" hgap="10.0" layoutX="157.0" layoutY="22.0" prefHeight="139.0" prefWidth="414.0">
+      <Label layoutX="32.0" layoutY="22.0" prefHeight="181.0" prefWidth="86.0" style="-fx-background-color: black;" />
+      <FlowPane alignment="CENTER" hgap="10.0" layoutX="151.0" layoutY="22.0" prefHeight="139.0" prefWidth="420.0" style="-fx-background-color: black;">
          <children>
-            <Label fx:id="front" text="10">
+            <Label fx:id="front" text="10" textFill="RED">
                <font>
                   <Font name="Comic Sans MS" size="96.0" />
                </font>
             </Label>
-            <Label prefHeight="28.0" prefWidth="20.0" text="X">
+            <Label prefHeight="28.0" prefWidth="20.0" text="X" textFill="YELLOW">
                <font>
                   <Font name="Comic Sans MS" size="48.0" />
                </font>
             </Label>
-            <Label fx:id="back" text="12">
+            <Label fx:id="back" text="12" textFill="LIME">
                <font>
                   <Font name="Comic Sans MS" size="96.0" />
                </font>
             </Label>
-            <Label text="=">
+            <Label text="=" textFill="AQUA">
                <font>
                   <Font name="Comic Sans MS" size="48.0" />
                </font>
             </Label>
-            <Label text="??">
+            <Label text="??" textFill="#ff00e4">
                <font>
                   <Font name="Comic Sans MS" size="96.0" />
                </font>
             </Label>
          </children>
       </FlowPane>
-      <Label layoutX="28.0" layoutY="64.0" text="Timer: ">
+      <Label layoutX="44.0" layoutY="38.0" text="Timer: " textFill="WHITE">
          <font>
             <Font name="Comic Sans MS" size="16.0" />
          </font>
       </Label>
-      <Label layoutX="30.0" layoutY="142.0" text="Score: ">
+      <Label layoutX="46.0" layoutY="116.0" text="Score: " textFill="WHITE">
          <font>
             <Font name="Comic Sans MS" size="16.0" />
          </font>
       </Label>
-      <Button fx:id="welcomeHome" layoutX="19.0" layoutY="356.0" mnemonicParsing="false" onMouseClicked="#handleBack" prefHeight="29.0" prefWidth="113.0" text="Back to Home">
+      <Button fx:id="welcomeHome" layoutX="19.0" layoutY="356.0" mnemonicParsing="false" onMouseClicked="#handleBack" prefHeight="29.0" prefWidth="113.0" style="-fx-background-color: black;" text="Back to Home" textFill="WHITE">
          <font>
             <Font name="Comic Sans MS Bold" size="13.0" />
          </font></Button>
       <FlowPane hgap="30.0" layoutX="157.0" layoutY="163.0" prefHeight="218.0" prefWidth="414.0" vgap="30.0">
          <children>
-            <Button fx:id="choice1" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="A">
+            <Button fx:id="choice1" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" style="-fx-background-color: black;" text="A" textFill="WHITE">
                <font>
                   <Font name="Comic Sans MS" size="24.0" />
                </font></Button>
-            <Button fx:id="choice2" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="B">
+            <Button fx:id="choice2" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" style="-fx-background-color: black;" text="B" textFill="WHITE">
                <font>
                   <Font name="Comic Sans MS" size="24.0" />
                </font></Button>
-            <Button fx:id="choice3" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="C">
+            <Button fx:id="choice3" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" style="-fx-background-color: black;" text="C" textFill="WHITE">
                <font>
                   <Font name="Comic Sans MS" size="24.0" />
                </font></Button>
-            <Button fx:id="choice4" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" text="D">
+            <Button fx:id="choice4" mnemonicParsing="false" prefHeight="60.0" prefWidth="191.0" style="-fx-background-color: black;" text="D" textFill="WHITE">
                <font>
                   <Font name="Comic Sans MS" size="24.0" />
                </font></Button>
@@ -80,12 +76,12 @@
             <Insets top="30.0" />
          </padding>
       </FlowPane>
-      <Label fx:id="time" layoutX="39.0" layoutY="84.0" text="60">
+      <Label fx:id="time" alignment="CENTER" contentDisplay="CENTER" layoutX="32.0" layoutY="58.0" prefHeight="56.0" prefWidth="86.0" text="60" textFill="WHITE">
          <font>
             <Font name="Comic Sans MS" size="40.0" />
          </font>
       </Label>
-      <Label fx:id="score" layoutX="38.0" layoutY="163.0" text="0">
+      <Label fx:id="score" alignment="CENTER" contentDisplay="CENTER" layoutX="32.0" layoutY="137.0" prefHeight="56.0" prefWidth="86.0" text="0" textFill="WHITE">
          <font>
             <Font name="Comic Sans MS" size="40.0" />
          </font>
