--- a/src/application/homeUI.fxml
+++ b/src/application/homeUI.fxml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
 
-<FlowPane alignment="BOTTOM_CENTER" columnHalignment="CENTER" hgap="1000.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" vgap="15.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.HomeController">
+<FlowPane alignment="BOTTOM_CENTER" columnHalignment="CENTER" hgap="1000.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-image: url('pic/wallpaper.jpg');" vgap="15.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.HomeController">
    <children>
-      <Button fx:id="start" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" onMouseClicked="#handleStart" prefHeight="40.0" prefWidth="500.0" text="S T A R T   G A M E">
+      <ImageView fitHeight="198.0" fitWidth="244.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../pic/logo.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="start" alignment="CENTER" mnemonicParsing="false" onAction="#initialize" onMouseClicked="#handleStart" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: black;" text="S T A R T   G A M E" textFill="WHITE">
          <font>
             <Font name="Comic Sans MS Bold" size="20.0" />
          </font></Button>
-      <Button fx:id="quit" mnemonicParsing="false" onMouseClicked="#handleQuit" prefHeight="40.0" prefWidth="500.0" text="Q U I T">
+      <Button fx:id="quit" mnemonicParsing="false" onMouseClicked="#handleQuit" prefHeight="40.0" prefWidth="500.0" style="-fx-background-color: black;" text="Q U I T" textFill="#ababab">
          <font>
             <Font name="Comic Sans MS Bold" size="20.0" />
          </font>
