--- a/src/application/boardUI.fxml
+++ b/src/application/boardUI.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
@@ -128,5 +130,10 @@
             </LinearGradient>
          </textFill>
       </Label>
+      <ImageView fitHeight="79.0" fitWidth="80.0" layoutX="458.0" layoutY="299.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../pic/banana2.gif" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
