--- a/src/application/gameUI.fxml
+++ b/src/application/gameUI.fxml
@@ -3,6 +3,8 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.text.Font?>
@@ -86,5 +88,10 @@
             <Font name="Comic Sans MS" size="40.0" />
          </font>
       </Label>
+      <ImageView fitHeight="113.0" fitWidth="86.0" layoutX="46.0" layoutY="232.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../pic/banana2.gif" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
